add rudimentary list of nodes

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -33,6 +33,16 @@
   color: #eff0f4;
 }
 
+.node_list{
+  font-family: sans-serif;
+  display: inline-block;
+  background: #2a2d36;
+  border: solid;
+  border-width: 6px;
+  border-color: #4E5666;
+  color: #eff0f4;
+}
+
 tbody {
   color: #CECFD2;
 }
