add parent selection, make data graph a bit nicer

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -117,6 +117,10 @@
     background: #8e0000;
 }
 
+.control-bar {
+    background: #dedede;
+}
+
 .data-link, .drawing-indicator {
     fill: none;
     stroke: #444;
