tweak class name color

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -36,6 +36,10 @@
   overflow-wrap: break-word;
 }
 
+.btnode h5 {
+    color: #858e99;
+}
+
 .node_list{
   font-family: sans-serif;
   display: inline-block;
