add fullscreen tree viewer for demo purposes

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -114,6 +114,13 @@
   height: 100%;
 }
 
+.fill-screen {
+    height: 100vh;
+}
+.fill-parent {
+    height: 100%;
+}
+
 .edit_canvas {
     height: 30em;
 }
