added save and load functionality. this closes #1

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -139,6 +139,10 @@
     background: #bebebe;
 }
 
+.spacer {
+  margin-left: auto;
+}
+
 path.data-hover {
     stroke: #148050;
     background: #148050;
