indicate that the app is loading via an animation

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -188,3 +188,50 @@ path.data-hover {
 .node-selected {
     background: #27406D;
 }
+
+#loading-icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font: 100px sans-serif;
+}
+
+@keyframes fade {
+    0% {
+      opacity: .1;
+    }
+    30% {
+      opacity: .9;
+    }
+    100% {
+      opacity: .1;
+    }
+}
+
+.wave span {
+    animation-name: fade;
+    animation-duration: 2.0s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+}
+.wave span:nth-child(2) {
+    animation-delay: .2s;
+}
+.wave span:nth-child(3) {
+    animation-delay: .4s;
+}
+.wave span:nth-child(4) {
+    animation-delay: .6s;
+}
+.wave span:nth-child(5) {
+    animation-delay: .8s;
+}
+.wave span:nth-child(6) {
+    animation-delay: 1.0s;
+}
+.wave span:nth-child(7) {
+    animation-delay: 1.2s;
+}
