added the ability to change the editor background color from the default dark to white

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -174,7 +174,14 @@ path.data-hover {
 }
 
 #editor_viewport {
+}
+
+.darkmode {
   background: #34393c;
+}
+
+.lightmode {
+  background: #ffffff;
 }
 
 .gripper {
