Add button to clear error messages and change sorting direction. By default the newest error is now displayed at the top of the list.

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -184,6 +184,13 @@ path.data-hover {
   background: #ffffff;
 }
 
+.clear-error {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10;
+}
+
 .gripper {
     fill: #74777f;
 }
