Added support for search in type fields. Closes #13

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -203,6 +203,14 @@ path.data-hover {
     background: #27406D;
 }
 
+.search-results {
+  padding-left: 10px;
+}
+
+.search-result:hover {
+  background-color: #007bff;
+}
+
 #loading-icon {
   position: absolute;
   left: 50%;
