--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -72,6 +72,14 @@
   min-width: 0;
 }
 
+.maxh50 {
+  max-height: 50%;
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
 .btnode tbody {
   color: #CECFD2;
 }
@@ -140,7 +148,6 @@
 }
 
 .edit_canvas {
-    height: 30em;
 }
 
 .top-bar {
