show availability of capability manager with a blue connected icon

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -319,6 +319,11 @@ div.jsoneditor-menu {
   color: #ff0000;
 }
 
+.cm_available {
+  padding: 0.25rem;
+  color: #007bff;
+}
+
 .filebrowser-bar:hover {
   background-color: #007bff;
   color: #ffffff;
