added tags to nodes that are searchable #77

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -346,6 +346,12 @@ div.jsoneditor-menu {
     visibility: visible;
   }
 }
+
+.tag:hover {
+  border: 1px solid #007bff !important;
+  cursor: pointer;
+}
+
 .grab:hover {
   cursor: grab;
 }
