indicate the status of the package list and message information in the connection icon in the upper left corner

--- a/ros_bt_py/html/tree_renderer.css
+++ b/ros_bt_py/html/tree_renderer.css
@@ -336,6 +336,16 @@ div.jsoneditor-menu {
   color: #007bff;
 }
 
+.packages-missing {
+  padding: 0.25rem;
+  color: #ff7300;
+}
+
+.messages-missing {
+  padding: 0.25rem;
+  color: #ffd000;
+}
+
 .filebrowser-bar:hover {
   background-color: #007bff;
   color: #ffffff;
